# live-countdown-bot

./: .dockerignore  .gitignore  Architecture.md  Dockerfile  LICENSE  README.md  bot.js  cluster.js  config.json.sample  config.sample.js  config.sample.json  docker-compose.yml  docker-stack.yml  ecosystem.config.cjs  index.js  package-lock.json  package.json  parsedates.py  pnpm-lock.yaml  pyproject.toml  registerInteractions.js  shard.js
.github/: FUNDING.yml
.github/workflows/: code-formatting.yml  docker.yml  test.yml
__tests__/: TimeDiffForHumans.test.js  computeTimeDiff.test.js  countdownHelper.test.js  lang.test.js  sqlite3.test.js
modules/: bot.js  botstats.js  chan.js  commands.js  computeTimeDiff.js  countdownHelper.js  dateparser.js  db.js  embed.js  faq.js  gitinfo.js  helpers.js  interactionHandler.js  lang.js  loader.js  messageHandler.js  people.js  permissionCheck.js  post.js  prefixHandler.js  reactionHelper.js  readSqlite3.js  register.js  sqlite3.js  timeDiffForHumans.js  timer.js  updateManager.js  update_queue.js  updates.js  utils.js  writeSqlite3.js  writeSqlite3Helper.js
modules/commands/: botstats.js  countdown.js  delete.js  help.js  list.js  newsitem.js  permcheck.js  permissionCheck.js  remindMeIn.js  respawn.js  sendToDM.js  timer.js  timestamp.js
modules/reloadable/: command_handler.js  command_list.js  dateparser.js  helpers.js  index.js  people.js  permcheck.js  register.js  sqlite3.js  updates.js  utils.js
modules/reloadable/commands/: botstats.js  countdown.js  delete.js  help.js  list.js  newsitem.js  permcheck.js  please.js  (+4 more)
